--- a/P01.md
+++ b/P01.md
@@ -1,14 +1,39 @@
-# Problem 1
+# Praktikum Minggu ke-1
+## Problem 1
 ```
 
 ```
 
-# Problem 2
+## Problem 2
 ```
+% Meminta masukan banyak bentos setiap jenis
+n1 = input('Tubifex sp. = ');
+n2 = input('Midge Larva = ');
+n3 = input('Leech = ');
+n4 = input('Sulcospira tonkiniana = ');
+n5 = input('Sulcospira schmidti = ');
+
+% Menjumlahkan semua individu bentos
+N = n1+n2+n3+n4+n5;
+
+% Mencari Index Dominasi Simpson
+D = (n1/N)^2+(n2/N)^2+(n3/N)^2+(n4/N)^2+(n5/N)^2;
+
+% Mencari Index Diversitas Simpson
+I = 1 - D;
+
+% Membandingkan nilai I dengan parameter
+if I > 0.8
+    fprintf('Tercemar ringan');
+elseif I < 0.6
+    fprintf('Tercemar berat');
+else
+    fprintf('Tercemar sedang');
+end
 
 ```
 
-# Problem 3: Program Menentukan Stabilitas di Atmosfer
+## Problem 3: Program Menentukan Stabilitas di Atmosfer
 ```
 % Input nilai temperatur pada ketinggian tertentu
 a = input('Nilai temperatur pada ketinggian 100mdpl: ');
@@ -34,7 +59,7 @@ end
 ```
 
 
-# Problem 4 Program Konversi 
+## Problem 4 Program Konversi 
 ```
 % Meminta masukan nilai parameter
 fprintf('Masukkan nilai parameter:')
