--- a/P01.md
+++ b/P01.md
@@ -1,6 +1,37 @@
 # Praktikum Minggu ke-1
 ## Problem 1
 ```
+% Program Konversi Temperatur
+clc
+clear
+
+% Input nilai temperatur awal
+U1 = input('Masukkan satuan temperatur awal: ','s');
+Ti = input('Masukkan temperatur awal: ');
+U2 = input('Mau konversi ke satuan apa? ','s');
+
+% Konversi Celcius ke Reamur dan sebaliknya
+if U1 == 'C' && U2 == 'R'
+    Tf = 4/5*Ti;
+    fprintf('Suhu dalam Reamur adalah\2f% ', Tf);
+elseif U1 == 'R' && U2 == 'C'
+    Tf = 5/4*Ti;
+    fprintf(Tf);
+% Konversi Celcius ke Fahrenheit dan sebaliknya
+elseif U1 == 'C' && U2 == 'F'
+    Tf = (9/5*Ti)+32;
+    fprintf(Tf);
+elseif U1 == 'F' && U2 == 'C'
+    Tf = (Ti-32)*5/9;
+    fprintf(Tf);
+% Konversi Reamur ke Fahrenheit dan sebaliknya
+elseif U1 == 'R' && U2 == 'F'
+    Tf = (9/4*Ti)+32;
+    fprintf(Tf);
+elseif U1 == 'F' && U2 == 'R'
+    Tf = (Ti-32)*4/9;
+    fprintf(Tf);
+end
 
 ```
 
