Update and rename P01.md to M01/M01.md

--- a/M01/M01.md
+++ b/M01/M01.md
@@ -1,5 +1,6 @@
 # Praktikum Minggu ke-1
 ## Problem 1
+### P01: Alternatif 1
 ```
 % Program Konversi Temperatur
 clc
@@ -35,7 +36,56 @@ end
 
 ```
 
+### P01: Alternatif 2 (oleh Zefanya)
+```
+%Menginput data ke dalam variabel;
+a=input('Satuan awal suhu (C/R/F): ', 's');
+n=input('Besar suhu: ');
+konv=input('Satuan akhir suhu (C/R/F): ', 's');
+
+%Merumuskan rumus konversi satuan suhu;
+CC=n;
+CF=9/5*n+32;
+CR=4/5*(n);
+RR=n;
+RF=9/4*n+32;
+RC=5/4*n;
+FF=n;
+FC=5/9*(n-32);
+FR=4/9*(n-32);
+
+%Menjelaskan segala kemungkinan konversi;
+if strcmp('C', a)
+    if strcmp('C', konv)
+    fprintf('Suhu tetap sebesar %.2f', n)
+    elseif strcmp('F', konv)
+    fprintf('Suhu dikonversi menjadi %.2f', CF)
+    elseif strcmp('R', konv)
+    fprintf('Suhu dikonversi menjadi %.2f', CR)
+    end
+elseif strcmp('F', a) 
+    if strcmp('F', konv)
+    fprintf('Suhu tetap sebesar %.2f', FF)
+    elseif strcmp('C', konv)
+    fprintf('Suhu dikonversi menjadi %.2f', FC)
+    elseif strcmp('R', konv)
+    fprintf('Suhu dikonversi menjadi %.2f', FR)
+    end
+elseif strcmp('R', a) 
+    if strcmp('R', konv)
+    fprintf('Suhu tetap sebesar %.2f', RR)
+    elseif strcmp('F', konv)
+    fprintf('Suhu dikonversi menjadi %.2f', RF)
+    elseif strcmp('C', konv)
+    fprintf('Suhu dikonversi menjadi %.2f', RC)
+    end
+else
+    fprintf('Tidak dapat dihitung')
+end
+```
+
 ## Problem 2
+### P02: Alternatif 1
 ```
 % Meminta masukan banyak bentos setiap jenis
 n1 = input('Tubifex sp. = ');
@@ -64,7 +114,33 @@ end
 
 ```
 
+### P02: Alternatif 2 (oleh Rayyan)
+```
+%question 2
+A1 = input('jumlah Tubifex sp.: ');
+A2 = input('jumlah Midge larva: ');
+A3 = input('jumlah Leech: ');
+A4 = input('jumlah Sulcospira tonkiniana: ');
+A5 = input('jumlah Sulcospira schmidti: ');
+
+%Rumus
+A = A1+A2+A3+A4+A5;
+D = ((A1/A)^2)+((A2/A)^2)+((A3/A)^2)+((A4/A)^2)+((A5/A)^2);
+I = 1-D;
+
+%output
+if I>0.8
+    fprintf('Tercemar ringan');
+elseif 0.6<=I && I<=0.8
+    fprintf('Tercemar sedang');
+else I<0.6
+    fprintf('Tercemar berat');
+end
+```
+
+
 ## Problem 3: Program Menentukan Stabilitas di Atmosfer
+### P03: Alternatif 1
 ```
 % Input nilai temperatur pada ketinggian tertentu
 a = input('Nilai temperatur pada ketinggian 100mdpl: ');
@@ -86,6 +162,28 @@ elseif pot == 0
     fprintf('Kondisi atmosfer netral');
 elseif pot > 0
     fprintf('Kondisi atmosfer stabil')
+end
+```
+
+### P03: Alternatif 2 (oleh Johan)
+```
+clear 
+clc
+
+t1 = input('suhu di ketinggian 100: ');
+t2 = input('suhu di ketinggian 1000: ');
+
+dT = t2 - t1;
+dz = 1000 - 100;
+m = dT/dz;
+a = m + 0.01;
+
+if a > 0
+    disp('potential temperature gradient is stable')
+elseif a == 0
+    disp('potential temperature gradient is neutral')
+elseif a < 0
+    disp('potential temperature gradient is unstable')
 end
 ```
 
