--- a/M02/M02.md
+++ b/M02/M02.md
@@ -3,19 +3,212 @@
 ## Problem 1: Jenis Bilangan Bulat, Ganjil/Genap, Prima
 ### P01: Alternatif 1
 ```
+clc
+clear
+
+n = input('Bilangan input: ', 's'); % Input bilangan
+f = false; % variabel kesalahan
+
+% Menggunakan loop for untuk memeriksa karakter
+for i = 1:length(n)
+    if ~ismember(n(i), ['0':'9' '-']) % Karakter yang valid
+        f = true;
+        break; % Keluar dari loop jika karakter tidak valid
+    end
+end
+
+if f
+    fprintf('Karakter tidak valid.\n');
+else
+    konv = str2double(n); % Mengonversi input string menjadi bilangan
+    if isnan(konv)
+        fprintf('Karakter tidak valid.\n');
+    else
+        if konv > 0 % Mengidentifikasi bilangan positif atau negatif
+            fprintf('%g adalah bilangan positif\n', konv);
+        elseif konv < 0
+            fprintf('%g adalah bilangan negatif\n', konv);
+        else
+            fprintf('Bilangan adalah nol\n', konv);
+        end
+
+        if mod(konv, 2) == 0 % Mengidentifikasi bilangan ganjil atau genap
+            fprintf('%g adalah bilangan genap\n', konv);
+        else
+            fprintf('%g adalah bilangan ganjil\n', konv);
+        end
+
+        if isprime(abs(konv)) % Mengidentifikasi bilangan prima atau tidak
+            fprintf('%g adalah bilangan prima\n', konv);
+        else
+            fprintf('%g bukan bilangan prima\n', konv);
+        end
+    end
+end
 ```
 
 ## Problem 2: Pelaporan Timbulan Sampah
 ### P02: Alternatif 1
 ```
+% Fungsi untuk clear command window
+clc
+clear
+
+% Menampilkan pilihan bulan
+fprintf('Pilihan Bulan:\nJan = 1\nFeb = 2\nMar = 3\nApr = 4\nMei = 5\nJun = 6\nJul = 7\nAgt = 8\nSep = 9\nOkt = 10\nNov = 11\nDes = 12\n');
+
+%Input Bulan
+bulan = input('Pilih Bulan:');
+
+%Input Hari
+%bulan yang memiliki 31 hari
+if bulan == 1 ||bulan == 3 ||bulan == 5 ||bulan == 7 ||bulan == 8 ||bulan == 10||bulan == 12 
+    hari = input('Jumlah Hari:');
+        if hari < 0 || hari > 31 % pembatasan input jumlah hari 
+            disp('Error, silahkan ulang operasi program')
+        else
+            for timbulan = 1:hari %loop menampilkan sampah dari hari pertama sampai ke-n
+                fprintf('Timbulan sampah hari ke-%g\n',timbulan);
+                b3 = input('Jumlah sampah B3 (ton) = ');
+                residu = input('Jumlah sampah residu (ton) = ');
+                daur = input('Jumlah sampah daur ulang (ton) = ');
+            end
+        A = hari + 1; %variabel untuk menampilkan hari setelah hari n yang diinput
+        B = 31 - hari; % variabel untuk menghitung mundur sampah akan diangkut
+        
+        % Menampilkan berapa yang belum teridentifikasi dan hitung mundur
+        fprintf('Timbulan sampah hari ke-%g hingga ke-31 = (Belum Teridentifikasi)\n',A);
+        fprintf ('Sampah akan diangkut dalam %g hari',B);
+        end
+%bulan yang memiliki 30 hari
+elseif bulan == 4 ||bulan == 6 ||bulan == 9 ||bulan == 11
+    hari = input('Jumlah Hari:');
+        if hari < 0 || hari > 30 % pembatasan input jumlah hari
+            disp('Error, silahkan ulang operasi program')
+        else
+            for timbulan = 1:hari %loop menampilkan timbulan dari hari ke-1 sampai hari ke-n
+                fprintf('Timbulan sampah hari ke-%g\n',timbulan);
+                b3 = input('Jumlah sampah B3 (ton) = ');
+                residu = input('Jumlah sampah residu (ton) = ');
+                daur = input('Jumlah sampah daur ulang (ton) = ');
+            end
+        A = hari + 1; % variabel menampilkan hari setelah hari yang diinput user
+        B = 30 - hari; % variabel hitung mundur hingga sampah diangkut
+        % Menampilkan berapa yang belum teridentifikasi dan hitung mundur
+        fprintf('Timbulan sampah hari ke-%g hingga ke-30 = (Belum Teridentifikasi)\n',A);
+        fprintf ('Sampah akan diangkut dalam %g hari',B); 
+        end
+%bulan yang memiliki 28 hari
+elseif bulan == 2
+     hari = input('Jumlah Hari:');
+        if hari < 0 || hari > 28 % pembatasan input jumlah hari 
+            disp('Error, silahkan ulang operasi program')
+        else
+            for timbulan = 1:hari %loop menampilkan timbulan dari hari ke-1 sampai hari ke-n
+                fprintf('Timbulan sampah hari ke-%g\n',timbulan);
+                b3 = input('Jumlah sampah B3 (ton) = ');
+                residu = input('Jumlah sampah residu (ton) = ');
+                daur = input('Jumlah sampah daur ulang (ton) = ');
+            end
+        A = hari + 1;  % variabel menampilkan hari setelah hari yang diinput user
+        B = 28 - hari; % variabel hitung mundur hingga sampah diangkut
+        % Menampilkan berapa yang belum teridentifikasi dan hitung mundur
+        fprintf('Timbulan sampah hari ke-%g hingga ke-28 = (Belum Teridentifikasi)\n',A);
+        fprintf ('Sampah akan diangkut dalam %g hari',B);
+        end
+%output jika memasukan angka selain angka 1-12
+else
+    disp('Error, silahkan ulang operasi program')
+end
 ```
 
 ## Problem 3: Deret Maclarurin untuk Mendekati Nilai Tertentu
 ### P03: Alternatif 1
 ```
+clc
+clear
+syms x
+% Mendefinisikan fungsi
+f = sin(x+10)-2*tan(x);
+
+% Deret Taylor dari fungsi awal
+t = taylor(f, 'ExpansionPoint', 0, 'Order', 5);
+x = 18.12;
+eval = eval(t);     % Memasukkan nilai x pada deret taylor
+
+fprintf('Maclaurin series: \n');
+disp(t)
+fprintf('The approximate value of\n');
+disp(f)
+fprintf('= %.4f', eval)
 ```
 
 ## Problem 4: Deret Taylor untuk Menentukan Kadar Polutan di Estuari
 ### P04: Alternatif 1
 ```
+% Memasukkan nilai x
+for i =1:inf
+    x = input("Masukkan jarak titik tinjau ke titik sumber (miles) dan harus bilangan negatif:");
+    if x <= 0
+        break
+    else
+        disp("Nilai x tidak boleh lebih dari nol.");
+    end
+end
+
+
+% Parameter
+a = 4.8;        % pengali 
+x0 = 0;         % orde awal
+emin = 0.05;    % galat minimum harus kurang dari 5%
+
+% Perulangan
+vtay = 0;
+err = 1;
+N = 20;
+for n = 0:N
+    vtay = vtay + tayt(n, x, x0, a);
+    v_aktual = velo(x, a);
+    err = abs(v_aktual - abs(vtay));
+    if err < emin
+        break
+    end
+end
+
+% Konsentrasi konservatif 
+s = conc(x, vtay);
+
+% Hasil perhitungan (orde, galat, aproksimasi, dan nilai konsentrasi)
+fprintf('Hasil aproksimasi kecepatan pada muara dengan deret taylor orde %d ', n);
+fprintf('adalah %.5f\n', vtay);
+fprintf('dengan error %.4f\n', err * 100);
+fprintf('Konsentrasi senyawa konservatifnya adalah %.4f\n', s);
+
+% Orde ke-n dari Deret Taylor
+function t = tayt(n, x, x0, a)
+    sign = (-1)^floor(0.5 * n);
+    an = a^n;
+    dxn = (x - x0)^n;
+    facn = factorial(n);
+    
+    if mod(n, 2) == 0
+        fx = sin(a * x0);
+    else
+        fx = cos(a * x0);
+    end
+
+    t = (sign * an * dxn / facn) * fx;
+end
+
+% Kecepatan aliran (aktual)
+function v = velo(x, a)
+    v = abs(sin(a * x));
+end
+
+% Fungsi konsentrasi konservatif polutan
+function c = conc(x, u)
+    s0 = 350;
+    E = 5;
+    c = s0 * exp(x * u / E);
+end
 ```
