--- a/M03/M03.md
+++ b/M03/M03.md
@@ -3,19 +3,277 @@
 ## Problem 1: 
 ### P01: Alternatif 1
 ```
+clc
+clear
+
+l = input('Lebar sungai (m) = '); % Menginput lebar sungai
+while l < 1
+    disp('Lebar sungai harus bernilai positif');
+    l = input('Lebar sungai (m) = ');
+end
+
+segmen = input('Jumlah segmen = '); % Menginput jumlah segmen
+while (segmen < 1) || (floor(segmen) ~= segmen)
+    disp('Jumlah segmen harus bernilai positif dan bulat');
+    segmen = input('Jumlah segmen = ');
+end
+
+x = segmen + 1; % Jumlah titik
+t = zeros(1, x); % Array untuk menyimpan hasil kedalaman
+
+for i = 1:x % Menginput kedalaman sungai
+    y = (i - 1) * l / (x - 1);
+    kedalaman = input(['Hasil pengukuran kedalaman pada x=', num2str(y), ' m: ']);
+    while kedalaman <= 0
+        disp('Kedalaman harus bernilai positif');
+        kedalaman = input(['Hasil pengukuran kedalaman pada x=', num2str(y), ' m: ']);
+    end
+    t(i) = kedalaman;
+end
+
+t = -t; % Diubah menjadi negatif agar dapat menjadi grafik kedalaman
+
+% Membuat grafik
+plot(linspace(0, l, x), t, "-");
+title('River Cross Section');
+xlabel('Lebar sungai (m)');
+ylabel('Kedalaman (m)');
+grid on;
+```
+### P01: Alternatif 2
+```
+% Input pengguna
+L = input("Lebar sungai (m) = ");
+N = input("Jumlah segmen = ");
+spc = linspace(0,L,N); % pembagian segmen sungai
+
+dx = L / N;     % beda panjang tiap segmen
+
+% Inisialisasi array awal
+x = [];
+h = [];
+for i = 0:N
+    xi = i * dx;
+    x = [x xi];
+    fprintf("Depth measurement at x=%0.3f m:", xi);
+    hi = input("");
+    h = [h -hi];        % hi yang diinput dijadikan negatif
+end
+
+disp(x);
+disp(h);
+
+% Mulai menggambar grafik
+figure
+plot(x, h)
+title('River Cross Section');
+xlabel('Lebar sungai (m)')
+ylabel('Kedalaman (m)')
+
 ```
 
 ## Problem 2: 
 ### P02: Alternatif 1
 ```
+fprintf('\n[[ Matrek Shop ]]')
+fprintf('\nSilakan Mengisi Rincian Pembelian\n')
+
+% Meminta masukan banyak jenis barang
+n = input('\nBanyaknya jenis barang: ');
+
+% Inisialisasi array harga dan jumlah pembelian 
+% dengan awal matriks kosong
+hrg_satuan = zeros(1, n);
+jmlh_beli = zeros(1, n);
+
+% Mengisi array harga dan jumlah pembelian
+for i = 1:n
+    fprintf('Barang ke-%d\n', i);
+    hrg_satuan(i) = input('Masukkan harga satuan: ');
+    jmlh_beli(i) = input('Masukkan jumlah pembelian: ');
+end
+
+% Menghitung total untuk setiap barang (operasi matriks)
+tot_tiap_jns = hrg_satuan .* jmlh_beli;
+tot_slrh = sum(tot_tiap_jns);
+
+% Mengubah array menjadi tabel nota belanja
+a = [hrg_satuan; jmlh_beli; tot_tiap_jns];
+jdl_col = {'Harga Satuan', 'Jumlah', 'Total'};
+table_a = array2table(a', 'VariableNames', jdl_col);
+
+fprintf('\n============= Nota Pembelian =============\n\n');
+% Menampilkan tabel nota belanja
+disp(table_a);
+
+% Menampilkan total keseluruhan hasil belanja
+fprintf('Total tagihan sebesar Rp%d\n', tot_slrh);
+
 ```
 
 ## Problem 3: 
 ### P03: Alternatif 1
 ```
+% Pilihan grafik
+disp("Choose the plot style:");
+disp("1. Two Plots in One Graph");
+disp("2. Two Subplots in One Figure");
+choice = input("Enter you choice (1 or 2): ");
+
+% Inisialisasi array awal
+time = [];
+pm2_5 = [];
+NO2 = [];
+
+% Meminta pengguna untuk input nilai pm2.5 dan no2
+i = 1;
+x = 0;
+while true
+    fprintf("Input data for Time Point %i (Enter -1 to finish):\n", i);
+    x = input("Enter PM2.5 concentration (ug/m3):");
+    if x == -1
+        break
+    else
+        pm2_5 = [pm2_5 x];
+    end
+    x = input("Enter N02 concentration (ppb):");
+    if x == -1
+        break
+    else
+        NO2 = [NO2 x];
+    end
+    
+    time = [time i];
+    i = i + 1;
+end
+
+% display time, pm2_5, NO2 for checking
+disp(time);
+disp(pm2_5);
+disp(NO2);
+
+% Menggambar grafik dari pilihan user
+if choice == 1
+  subplot(1, 1, 1);
+  plot(time, pm2_5, 'ob', time, NO2, 'xr');
+  grid on;
+else
+  subplot(2, 1, 1);
+  plot(time, pm2_5, 'ob');
+  grid on;
+  
+  subplot(2, 1, 2);
+  plot(time, NO2, 'xr');
+  grid on;
+ending
+
+```
+### P03: Alternatif 2
+```
+fprintf('Pilih jenis plot:\n')
+fprintf('1. Dua plot dalam satu grafik\n')
+fprintf('2. Dua subplot dalam satu gambar\n')
+
+c = input('Tulis pilihan Anda (1 or 2): ');
+p = 0;
+
+% Inisialisasi array awal kosong
+pm = zeros(1,100);
+no = zeros(1,100);
+h = zeros(1,100);
+
+% Kalau user pilih no 1
+if c == 1
+    while p ~= -1       % selama user tidak memilih utk mengakhiri
+        p = p+1;
+        fprintf('Masukkan data Time Point %g (Tulis -1 untuk mengakhiri):\n', p)
+        a = input('Masukkan konsentrasi PM2.5 (μg/m^3): ');
+        b = input('Masukkan konsentrasi NO2 (ppb): ');
+        h(p) = p;
+        pm(p) = a;
+        no(p) = b;
+        if a == -1 || b == -1
+            p = p-1;
+            dh = h(1,1:p);
+            dpm = pm(1,1:p);
+            dno = no(1,1:p);
+            % Mulai gambarr
+            figure
+            plot(dh,dpm, 'o b', dh,dno,'x r');
+            title('Konsentrasi Polutan Setiap Waktu')
+            xlabel('Time Point')
+            ylabel('Konsentrasi')
+            legend('PM2,5', 'NO2')
+            grid on;
+            break
+        end
+    end
+% Kalau user pilih no 2
+elseif c == 2
+    while p ~= -1
+        p = p+1;
+        fprintf('Masukkan data Time Point %g (Tulis -1 untuk mengakhiri):\n', p)
+        a = input('Masukkan konsentrasi PM2.5 (μg/m^3): ');
+        b = input('Masukkan konsentrasi NO2  (ppb): ');
+        h(p) = p;
+        pm(p) = a;
+        no(p) = b;
+        if a == -1 || b == -1
+            p = p-1;
+            dh = h(1,1:p);
+            dpm = pm(1,1:p);
+            dno = no(1,1:p);
+            subplot(2,1,1);
+            plot(dh,dpm,'o b');
+            title('Konsentrasi PM2.5 Setiap Waktu')
+            xlabel('Time Point')
+            ylabel('Konsentrasi')
+            grid on;
+            subplot(2,1,2);
+            plot(dh,dNO,'x r');
+            title('Konsentrasi NO2 Setiap Waktu')
+            xlabel('Time Point')
+            ylabel('Konsentrasi')
+            grid on;
+            break
+        end
+    end
+else
+    disp('Masukkan kembali jenis plot yang sesuai (1 atau 2)')
+end
 ```
 
 ## Problem 4: 
 ### P04: Alternatif 1
 ```
+% Perintah untuk membaca file excel dan menampilkan tabelnya
+A = readtable('water_depth.xlsx');
+disp(A)
+
+% Mendefinisikan setiap baris/kolom di tabel menjadi suatu variabel
+fprintf('\nCalculating Hydraulic Depth of Pipes:\n')
+fprintf('-------------------------\n')
+b = table2array(A);
+x = b(1);
+y = b(2);
+z = b(3);
+
+% Mengecek bilangan yang tidak sesuai pada excel
+if x <= 0 || y <= 0 || z <= 00
+    fprintf('Data tidak valid (nol atau negatif), periksa kembali file excel Anda');
+else
+    fprintf('Diameter (m): %d %d %d', x,y,z);
+    fprintf('\n-------------------------\n')
+    fprintf('Calculated Hydraulic Depth (m):')
+    fprintf('\n-------------------------\n')
+    
+    % Menghitung kedalaman dari alat hidrolik untuk setiap pipa
+    i = 1;      % dimulai dari pipa 1
+    for j = 1:3
+        D = 2/3*b(i);
+        fprintf('\nPipe %d:', j)
+        disp(D)
+        i = i+1;
+    end
+end
 ```
