--- a/M03/M03.md
+++ b/M03/M03.md
@@ -1,6 +1,6 @@
 # Praktikum 3: Input & Output Procedures
 
-## Problem 1: 
+## Problem 1: Program Bentuk Penampang Sungai
 ### P01: Alternatif 1
 ```
 clc
@@ -72,7 +72,7 @@ ylabel('Kedalaman (m)')
 
 ```
 
-## Problem 2: 
+## Problem 2: Program Nota Belanja Matrek Shop
 ### P02: Alternatif 1
 ```
 fprintf('\n[[ Matrek Shop ]]')
@@ -111,7 +111,7 @@ fprintf('Total tagihan sebesar Rp%d\n', tot_slrh);
 
 ```
 
-## Problem 3: 
+## Problem 3: Program Visualisasi Konsentrasi Polutan di Udara
 ### P03: Alternatif 1
 ```
 % Pilihan grafik
@@ -243,7 +243,7 @@ else
 end
 ```
 
-## Problem 4: 
+## Problem 4: Program Menghitung Kedalaman Air pada Pipa Alat Hidrolik 
 ### P04: Alternatif 1
 ```
 % Perintah untuk membaca file excel dan menampilkan tabelnya
