--- a/M04/M04.md
+++ b/M04/M04.md
@@ -1,6 +1,95 @@
 # Praktikum 4: Persamaan Non-Linear
 
-## Problem 1:
-### P01: Alternatif 1
+## Problem 3:
 ```
+clc
+clear
+syms x;
+
+% Persamaan yang diberikan
+Rx = inline('20*x-x^2+sin(2*x));
+disp(Rx)
+z = diff(Rx(x));
+dRx = inline(z);
+e0 = 0.001;
+
+fprintf('Methods of Iteration\n');
+fprintf('1. Secant Method\n');
+fprintf('2. Newton-Raphson Method\n');
+
+pilih = input('Select method: ');
+
+if pilih ~= 1 || pilih ~= 2
+	fprintf('Your input is wrong, make sure it is either 1 or 2\n');
+	fprintf('Please restart the program');
+	break % terus run aja lg
+end
+
+i = 0;
+% Metode Secant
+if pilih == 1
+	a = input('Input lower boundary:');
+	b = input('Input upper boundary:');
+	if a == b 
+			fprintf('Please make sure lower boundary is not the same number as upper boundary');
+			a = input('Input lower boundary:');
+			b = input('Input upper boundary:');
+	end
+	
+	% Perhitungan galat awal	
+	e = abs((b-a)/b);
+
+	while e > e0
+		
+		fa = dRx(a);
+		fb = dRx(b);
+		% disp(fa)
+		% disp(fb)
+
+		% Nilai x baru (Persamaan umum Secant)
+		c = b - ((fb*(b-a))/(fb-fa));
+		
+		% Galat baru
+		g = abs((c-b)/c);
+		g = e;
+
+		% Tambah iterasi
+		i = i + 1;
+	end
+	
+	% Print hasil
+	%{ commentblock--> buat debug aj
+	fprintf('Iterasi ke-%g\n', i);
+	fprintf('Radius (x) = %4f\n', c);
+	fprintf('galat %4f\n', e);
+	%}
+
+	fprintf('The optimal domain radius is %4f, with a %4f margin of error', c, e);
+	fprintf('It tooks %g iteration(s) with the Secant Method to find this result', i);
+
+% Metode Newton Raphson
+elseif pilih == 2
+		x0 = input('Input initial guess: ');
+		z = diff(Rx(x));
+		dRx = inline(z);                  % Turunan pertama
+		lg = diff(dRx(x));
+		ddRx = inline(lg);                % Turunan kedua
+
+		% Nilai x bari (Persamaan umum Newton-Raphson)
+		x1 = x0 - (dRx(x0)/ddRx(x0));
+
+		% Mencari nilai galat
+		g = abs((x1-x0)/x1);
+		g = e;
+
+	while e > e0
+		x1 = x0 - (dRx(x0)/ddRx(x0));
+		g = abs((x1-x0)/x1);
+		g = e;
+		break
+	end
+		fprintf('The optimal domain radius is %4f, with a %4f margin of error', x0, e);
+		fprintf('It tooks %g iteration(s) with the Secant Method to find this result', i);
+	end
+end
 ```
