--- a/M05/M05.md
+++ b/M05/M05.md
@@ -28,7 +28,7 @@ err_2 = zeros(1,N);
 err_3 = zeros(1,N);
 
 % Persamaan umum konsentrasi
-C = inline('');
+C = inline('C_(s)(i+1)=(B_(s)-(A(s,s+1)*C_(s+1)(i)+A(s,s+2)*C(s+2)/A(s,s)');
 
 % Persamaan umum mencari galat
 g0 = 10^-3;  % Galat yang ditoleransi
@@ -65,6 +65,33 @@ disp(C_3)
 disp(err_1)
 disp(err_2)
 disp(err_3)
+
+% Membuat tabel dari kumpulan array --> matriks
+eray = [iter;C_1;err_1;C_2;err_2;C_3;err_3];
+jdl_col = {'iterasi','C_1', 'Error C_1','C_2', 'Error C_2','C_3', 'Error C_3'};
+table = array2table(eray, 'VariableNames',jdl_col);
+disp(table)
+
+```
+
+```
+% Initial value
+i = 0
+for i = 1:N
+C1(i) = 0;
+C2(i) = 0;
+C3(i) = 0;
+
+% Iterasi Gauss-Seidel untuk setiap 
+C1(i+1) = (B(1,1)-(og(1,2)*C2(i) + og(1,3)*C3(i)))/(og(1,1));
+C2(i+2) = (B(2,1)-(og(2,1)*C1(i+1) + og(2,3)*C3(i)))/(og(2,2));
+C3(i+2) = (B(3,1)-(og(3,1)*C1(i+1) + og(3,2)*C2(i+1)))/(og(3,3));
+
+% Galat dari setiap konsentrasi
+err_1 = abs((C1(i+1)-C1(i))/C1(i+1));
+err_2 = abs((C2(i+1)-C2(i))/C2(i+1));
+err_3 = abs((C3(i+1)-C3(i))/C3(i+1));
+end
 
 % Membuat tabel dari kumpulan array --> matriks
 eray = [iter;C_1;err_1;C_2;err_2;C_3;err_3];
